--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.23.2
 pydantic==2.3.0
 neo4j==5.11.0
 elasticsearch==8.9.0
-python-dotenv==1.0.0
+python-dotenv==0.21.1 
 langchain==0.0.281
 scrapy==2.8.0
 spacy==3.6.1
@@ -14,7 +14,8 @@ plotly==5.16.1
 networkx==3.1
 streamlit==1.26.0
 pytest==7.4.0
-aiohttp==3.8.5spacy==3.6.1
+aiohttp==3.8.5
 matplotlib==3.7.2
-pillow==10.0.0
-networkx==3.1
+pillow>=7.1.0,<10.0.0
+beautifulsoup4
+lxml
