--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,66 @@
+# Core API and web framework
 fastapi==0.103.1
 uvicorn==0.23.2
 pydantic==2.3.0
+starlette==0.27.0
+
+# Database and storage
 neo4j==5.11.0
 elasticsearch==8.9.0
-python-dotenv==0.21.1 
-langchain==0.0.281
-scrapy==2.8.0
+elastic-transport==8.17.1
+
+# NLP and AI
 spacy==3.6.1
+torch>=2.2.0
 transformers==4.33.1
+langchain==0.0.281
 scikit-learn==1.2.2
+langsmith==0.0.92
+
+# spaCy dependencies
+thinc==8.1.12
+murmurhash>=0.28.0
+cymem>=2.0.2
+preshed>=3.0.2
+wasabi<1.2.0,>=0.9.1
+srsly<3.0.0,>=2.4.3
+catalogue<2.1.0,>=2.0.6
+typer<0.10.0,>=0.3.0
+pathy>=0.10.0
+smart-open<7.0.0,>=5.2.1
+langcodes<4.0.0,>=3.2.0
+
+# Data processing and visualization
 pandas==2.1.0
+numpy==1.26.4
 plotly==5.16.1
 networkx==3.1
-streamlit==1.26.0
-pytest==7.4.0
-aiohttp==3.8.5
 matplotlib==3.7.2
-pillow>=7.1.0,<10.0.0
-beautifulsoup4
-lxml
+pillow==9.5.0
+numexpr==2.10.2
+pyarrow==20.0.0
+
+# Web and networking
+aiohttp==3.8.5
+requests>=2.31.0
+beautifulsoup4==4.13.4
+feedparser==6.0.10
+lxml==5.4.0
+scrapy==2.8.0
+
+# Testing and utilities
+pytest==7.4.0
+python-dotenv==0.21.1
+PyYAML==6.0.2
+cryptography==45.0.2
+tenacity==8.5.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+greenlet>=1.0.0
+
+# UI
+streamlit==1.26.0
+altair==5.5.0
+pydeck==0.9.1
+watchdog==6.0.0
+tornado==6.5
